--- a/templates/default/admin.css
+++ b/templates/default/admin.css
@@ -50,6 +50,9 @@
 	padding: 0px 0px 0px 6px;
 	border-left: 2px solid silver;
 }
+#adminmenu ul li.selected {
+	font-weight: bold;
+}
 
 
 
@@ -71,7 +74,7 @@ h1#admintitle {
 
 #admincontent {
 	background-color: #EFEFEF;
-	padding: 6px 6px 0px 6px;
+	padding: 10px 10px 0px 10px;
 	margin: 0px 0px 20px 200px;
 	text-align: left;
 	border: 1px solid silver;
