--- a/templates/default/styles.css
+++ b/templates/default/styles.css
@@ -247,6 +247,17 @@ td.formcontrols input {
 td.formcontrols a {
 	color: #336699 !important;
 }
+table.maintable th.icon {
+	width: 25px;
+}
+table.maintable td.icon {
+	background-color: #E8E8E8;
+	width: 25px;
+}
+table.maintable th.count {
+	width: 1%;
+	text-align: center;
+}
 table.maintable td.count {
 	background-color: #E8E8E8;
 	width: 1%;
@@ -254,12 +265,8 @@ table.maintable td.count {
 	font-weight: bold;
 	color: #333333;
 }
-table.maintable td.lastpostinfo {
+table.maintable .lastpostinfo {
 	width: 200px;
-}
-table.maintable td.icon {
-	background-color: #E8E8E8;
-	width: 1px;
 }
 
 /* Forumlist styles */
