--- a/templates/default/styles.css
+++ b/templates/default/styles.css
@@ -217,7 +217,7 @@ table.maintable th, table.confirmform th {
 }
 table.maintable td, table.confirmform td, td.msg {
 	background-color: #EFEFEF;
-	padding: 6px;
+	padding: 6px !important;
 	text-align: left;
 	border-left: 1px solid silver;
 	border-top: 1px solid silver;
