--- a/templates/default/admin.css
+++ b/templates/default/admin.css
@@ -35,7 +35,7 @@
 	clear: both;
 	float: left;
 	margin: 0px 0px 20px 0px;
-	width: 170px;
+	width: 165px;
 	background-color: #EFEFEF;
 	padding: 6px 6px 0px 6px;
 	text-align: left;
@@ -68,7 +68,7 @@ h1#admintitle {
 	background-repeat: repeat-x;
 	text-align: left;
 	padding: 4px 6px 4px 6px;
-	margin: 0px 0px 0px 200px;
+	margin: 0px 0px 0px 195px;
 	border: 1px solid silver;
 }
 
@@ -77,7 +77,7 @@ h1#admintitle {
 #admincontent {
 	background-color: #EFEFEF;
 	padding: 10px 10px 0px 10px;
-	margin: 0px 0px 20px 200px;
+	margin: 0px 0px 20px 195px;
 	text-align: left;
 	border: 1px solid silver;
 	border-top: 0px;
@@ -101,6 +101,32 @@ h1#admintitle {
 }
 #admincontent #resultset {
 	font-size: 8pt !important;
+}
+
+
+
+#adminconfigtable {
+	border-collapse: collapse;
+	margin: 0px 0px 10px 0px;
+	width: 100%;
+}
+#adminconfigtable tr {
+	border-bottom: 1px solid silver;
+}
+#adminconfigtable td {
+	padding: 4px;
+	text-align: left;
+}
+#adminconfigtable td.fieldtitle {
+	font-weight: bold;
+	text-align: right;
+	width: 35%;
+	background-color: #E8E8E8 !important;
+}
+#adminconfigtable td.submit {
+	font-weight: bold;
+	text-align: center;
+	background-color: #E8E8E8 !important;
 }
 
 
