--- a/templates/default/admin.css
+++ b/templates/default/admin.css
@@ -117,7 +117,7 @@ h1#admintitle {
 	padding-right: 4px;
 }
 
-#adminconfigtable, #admincatstable {
+#adminconfigtable, #admincatstable, #adminforumstable {
 	border-collapse: collapse;
 	border-left: 1px solid silver;
 	border-right: 1px solid silver;
@@ -126,11 +126,11 @@ h1#admintitle {
 	width: 100%;
 	clear: right;
 }
-#adminconfigtable th, #adminconfigtable td, #admincatstable th, #admincatstable td {
+#adminconfigtable th, #adminconfigtable td, #admincatstable th, #admincatstable td, #adminforumstable th, #adminforumstable td {
 	border-left: 1px solid silver;
 	border-top: 1px solid silver;
 }
-#adminconfigtable th, #admincatstable th {
+#adminconfigtable th, #admincatstable th, #adminforumstable th {
 	font-weight: bold;
 	padding: 4px 6px 4px 6px;
 	background-image: url(gfx/topmenu_bg.png);
@@ -142,11 +142,11 @@ h1#admintitle {
 #adminconfigtable th {
 	border-left: 5px solid silver;
 }
-#adminconfigtable td, #admincatstable td {
+#adminconfigtable td, #admincatstable td, #adminforumstable td {
 	padding: 6px;
 	text-align: left;
 }
-#adminconfigtable td.fieldtitle, #admincatstable td.fieldtitle {
+#adminconfigtable td.fieldtitle, #admincatstable td.fieldtitle, #adminforumstable td.fieldtitle {
 	font-weight: normal;
 	text-align: left;
 	width: 25%;
@@ -155,15 +155,15 @@ h1#admintitle {
 #adminconfigtable td.fieldtitle {
 	width: 40%;
 }
-#admincatstable th.action, #admincatstable td.action {
+#admincatstable th.action, #admincatstable td.action, #adminforumstable th.action, #adminforumstable td.action {
 	width: 1%;
 	white-space: pre;
 }
-#admincatstable td.action {
+#admincatstable td.action, #adminforumstable td.action {
 	background-color: #E8E8E8;
 	text-align: center;
 }
-#adminconfigtable td.submit, #admincatstable td.submit {
+#adminconfigtable td.submit, #admincatstable td.submit, #adminforumstable td.submit {
 	font-weight: bold;
 	text-align: center;
 	background-color: #E8E8E8;
