--- a/templates/default/styles.css
+++ b/templates/default/styles.css
@@ -575,27 +575,43 @@ p#linkbar {
 	text-align: center;
 	margin-bottom: 20px;
 }
-#bbcode-controls {
-	margin: 3px 0px 7px 0px;
+
+#bbcode-controls, #smiley-controls {
+	list-style: none;
 }
-#bbcode-controls a {
+#bbcode-controls li, #smiley-controls li {
+	display: inline;
+}
+
+#bbcode-controls {
+	padding: 4px 3px 4px 3px;
+	background-color: #ffffff;
+	background-image: url(gfx/bbcode_bg.png);
+	background-position: bottom;
+	background-repeat: repeat-x;
+	border: 1px solid #d7cbbe;
+	border-top: 0px;
+	margin: 0px 0px 3px 0px;
+}
+#bbcode-controls li a {
+	padding: 2px 6px 2px 6px;
+	margin: 0px 2px 0px 0px;
 	text-decoration: none;
-	padding: 1px 6px 1px 6px;
-	border: 1px solid #EFEFEF;
-	border-left: 1px solid silver;
-	color: black !important;
+	color: #333333 !important;
 	cursor: default !important;
 }
-#bbcode-controls a:hover {
+#bbcode-controls li a:hover {
+	padding: 2px 5px 2px 5px;
 	background-color: #dae2e4;
 	border: 1px solid #2058b9;
 }
 #smiley-controls {
-	margin: 0px 0px 5px 0px;
+	margin: 3px 0px 0px 0px;
 }
-#smiley-controls img {
-	padding: 0px 2px 0px 2px;
+#smiley-controls li {
+	margin: 0px 4px 0px 0px;
 }
+
 #post-options input, #post-options label {
 	margin: 5px 0px 0px 0px;
 }
