--- a/templates/default/styles.css
+++ b/templates/default/styles.css
@@ -104,6 +104,11 @@ blockquote.quote .content {
 strong {
 	font-weight: bold;
 }
+hr {
+	border: 0;
+	border-top: 1px solid silver;
+	padding: 6px;
+}
 #logo {
 	float: left;
 	height: 30px;
