--- a/templates/default/admin.css
+++ b/templates/default/admin.css
@@ -111,7 +111,7 @@ h1#admintitle {
 	border-right: 2px solid silver;
 	padding-right: 4px;
 }
-#adminconfigtable, #admincatstable, #adminforumstable, #adminmodulestable, #adminmemberstable {
+#adminconfigtable, #adminregulartable {
 	border-collapse: collapse;
 	border-left: 1px solid silver;
 	border-right: 1px solid silver;
@@ -120,11 +120,11 @@ h1#admintitle {
 	width: 100%;
 	clear: right;
 }
-#adminconfigtable th, #adminconfigtable td, #admincatstable th, #admincatstable td, #adminforumstable th, #adminforumstable td, #adminmodulestable th, #adminmodulestable td, #adminmemberstable th, #adminmemberstable td {
+#adminconfigtable th, #adminconfigtable td, #adminregulartable th, #adminregulartable td {
 	border-left: 1px solid silver;
 	border-top: 1px solid silver;
 }
-#adminconfigtable th, #admincatstable th, #adminforumstable th, #adminmodulestable th, #adminmemberstable th {
+#adminconfigtable th, #adminregulartable th {
 	font-weight: bold;
 	padding: 4px 6px 4px 6px;
 	background-image: url(gfx/topmenu_bg.png);
@@ -136,11 +136,11 @@ h1#admintitle {
 #adminconfigtable th {
 	border-left: 5px solid silver;
 }
-#adminconfigtable td, #admincatstable td, #adminforumstable td, #adminmodulestable td, #adminmemberstable td {
+#adminconfigtable td, #adminregulartable td {
 	padding: 6px;
 	text-align: left;
 }
-#adminconfigtable td.fieldtitle, #admincatstable td.fieldtitle, #adminforumstable td.fieldtitle, #adminmemberstable td.fieldtitle {
+#adminconfigtable td.fieldtitle, #adminregulartable td.fieldtitle {
 	font-weight: normal;
 	text-align: left;
 	width: 35%;
@@ -149,15 +149,15 @@ h1#admintitle {
 #adminconfigtable td.fieldtitle {
 	width: 40%;
 }
-#admincatstable th.action, #admincatstable td.action, #adminforumstable th.action, #adminforumstable td.action, #adminmodulestable th.action, #adminmodulestable td.action {
+#adminregulartable th.action, #adminregulartable td.action {
 	width: 1%;
 	white-space: pre;
 }
-#admincatstable td.action, #adminforumstable td.action, #adminmodulestable td.action {
+#adminregulartable td.action {
 	background-color: #E8E8E8;
 	text-align: center;
 }
-#adminconfigtable td.submit, #admincatstable td.submit, #adminforumstable td.submit, #adminmemberstable td.submit {
+#adminconfigtable td.submit, #adminregulartable td.submit {
 	font-weight: bold;
 	text-align: center;
 	background-color: #E8E8E8;
