--- a/templates/default/styles.css
+++ b/templates/default/styles.css
@@ -587,6 +587,10 @@ p#linkbar {
 	text-align: center;
 	margin-bottom: 20px;
 }
+.jump-in-data {
+	color: #666;
+	margin-left: 10px;
+}
 
 #bbcode-controls, #smiley-controls {
 	list-style: none;
