--- a/templates/default/admin.css
+++ b/templates/default/admin.css
@@ -72,14 +72,14 @@ h1#admintitle {
 }
 #admincontent {
 	background-color: #EFEFEF;
-	padding: 10px 10px 10px 10px;
+	padding: 10px 10px 0 10px;
 	margin: 0px 0px 20px 195px;
 	text-align: left;
 	border: 1px solid silver;
 	border-top: 0px;
 	line-height: 150%;
 }
-#admincontent h2, #admincontent p, #admincontent ul {
+#admincontent h2, #admincontent p, #admincontent ul, #admincontent fieldset {
 	margin: 0px 0px 10px 0px;
 }
 #admincontent h2 {
@@ -94,6 +94,13 @@ h1#admintitle {
 #admincontent strong, #admincontent .strong {
 	font-weight: normal;
 	color: #BF0000;
+}
+#admincontent fieldset {
+	padding: 10px;
+	border: 1px solid silver;
+}
+#admincontent fieldset legend {
+	padding: 0 5px 0 5px;
 }
 #admincontent #resultset {
 	font-size: 8pt;
@@ -130,7 +137,7 @@ h1#admintitle {
 #adminconfigtable td.fieldtitle, #adminregulartable td.fieldtitle {
 	font-weight: normal;
 	text-align: left;
-	width: 35%;
+	width: 30%;
 	background-color: #E8E8E8;
 }
 #adminconfigtable td.fieldtitle {
