--- a/templates/default/styles.css
+++ b/templates/default/styles.css
@@ -292,6 +292,10 @@ table.maintable .lastpostinfo {
 	line-height: 150%;
 	font-size: 10pt;
 }
+.msgbox p p {
+	padding: 0px;
+	border: 0px;
+}
 .preview div.preview {
 	line-height: 125%;
 	padding: 18px;
